--- a/dotnet5/Pages/Index.cshtml
+++ b/dotnet5/Pages/Index.cshtml
@@ -7,7 +7,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome @(Model.user.Name)</h1>
+    <h1 class="display-4">Welcome Marco</h1>
 
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
